# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[options]
zip_safe = True
include_package_data = False
python_requires  = >= 3.6
setup_requires   = "choosenim_install"
install_requires = "nimporter"

[options.exclude_package_data]
* = *.*

[metadata]
name             = python_native
description      = Python compiled native module with static memory management
keywords         = python3, python4, cpython, speed, cython, c, performance, compiled, native, fast, nim
url              = https://github.com/juancarlospaco
author           = User
author_email     = user@gmail.com
license          = MIT
platforms        = Linux,Darwin,Windows
license_file     = LICENSE
long_description = https://github.com/juancarlospaco
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
version = 9.9.9
